# deepdrivewe-academy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  properdocs.yml  pyproject.toml  release-please-config.json  tox.ini
.claude/: CLAUDE.md
.claude/skills/academy-agent-framework/: SKILL.md
.claude/skills/deepdrivewe-example/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-uv-lock.yml  docs.yml  pr-title.yml  release.yml
deepdrivewe/: api.py  exchange.py  parsl.py  utils.py
deepdrivewe/ai/: __init__.py  aae.py  cvae.py  utils.py
deepdrivewe/binners/: __init__.py  base.py  multirectilinear.py  rectilinear.py
deepdrivewe/recyclers/: base.py
deepdrivewe/resamplers/: base.py
deepdrivewe/simulation/: amber.py  openmm.py  synd.py
deepdrivewe/workflows/: __init__.py  ddwe.py  westpa.py
docs/: contributing.md  gen_ref_pages.py  index.md
docs/concepts/: architecture.md  weighted-ensemble.md
docs/getting-started/: claude-skill.md  installation.md  quickstart.md
docs/tutorials/: openmm-ntl9-hk.md
examples/minimal_pattern/: main.py
examples/minimal_westpa/: README.md  main.py
examples/openmm_ntl9_ddwe/: config.yaml  main.py  workflow.py
examples/openmm_ntl9_hk/: README.md  config.yaml  main.py  workflow.py
examples/openmm_ntl9_hk_multisite/: README.md  config.yaml  main.py  workflow.py
tests/: README.md  conftest.py  test_import.py
tests/integration/: test_checkpoint.py  test_io.py  test_workflow.py
tests/unit/: test_api.py  test_binners.py  test_exchange.py  test_openmm.py  test_parsl.py  test_recyclers.py  test_resamplers.py  test_utils.py
